# FlightDeck

./: .gitignore  Cargo.toml  README.md
crates/flightdeck-adapters/: Cargo.toml
crates/flightdeck-adapters/src/: claude.rs  codex.rs  gemini.rs  lib.rs
crates/flightdeck-api/: Cargo.toml
crates/flightdeck-api/src/: main.rs  routes.rs
crates/flightdeck-collector/: Cargo.toml
crates/flightdeck-collector/src/: adapter.rs  collector.rs  error.rs  lib.rs
crates/flightdeck-core/: Cargo.toml
crates/flightdeck-core/src/: error.rs  events.rs  lib.rs
crates/flightdeck-parser/: Cargo.toml
crates/flightdeck-parser/src/: claude.rs  codex.rs  error.rs  lib.rs
crates/flightdeck-storage/: Cargo.toml
crates/flightdeck-storage/src/: db.rs  error.rs  lib.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx
dashboard/src/hooks/: useApi.ts
dashboard/src/pages/: Metrics.tsx  SessionDetail.tsx  Sessions.tsx
dashboard/src/types/: index.ts
