[package]
name = "flightdeck-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[[bin]]
name = "flightdeck-api"
path = "src/main.rs"

[dependencies]
flightdeck-core = { path = "../flightdeck-core" }
flightdeck-storage = { path = "../flightdeck-storage" }
flightdeck-collector = { path = "../flightdeck-collector" }
flightdeck-parser = { path = "../flightdeck-parser" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
dirs = "5.0"