[package]
name = "flightdeck-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true

[dependencies]
flightdeck-core = { path = "../flightdeck-core" }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }